--- a/LiquidBottler.csproj
+++ b/LiquidBottler.csproj
@@ -70,11 +70,11 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>if not exist "$(ProjectDir)mods\$(TargetName)" (mkdir $(ProjectDir)\mods\$(TargetName))
-xcopy /Y /S /R /Q "$(TargetPath)" "$(ProjectDir)mods\$(TargetName)\$(TargetName).dll" 
+copy /Y "$(TargetPath)" "$(ProjectDir)mods\$(TargetName)\$(TargetName).dll"
 if exist "$(ProjectDir)anims" (xcopy /Y /R /I /E /Q  "$(ProjectDir)anims" "$(ProjectDir)mods\$(TargetName)\anims")
-if exist "$(ProjectDir)Config.json" (copy /Y /S /R /Q "$(ProjectDir)Config.json" "$(ProjectDir)mods\$(TargetName)\Config.json")
+if exist "$(ProjectDir)Config.json" (copy /Y "$(ProjectDir)Config.json" "$(ProjectDir)mods\$(TargetName)\Config.json")
 if exist "$(ProjectDir)mod_info.yaml" (copy /Y "$(ProjectDir)mod_info.yaml" "$(ProjectDir)mods\$(TargetName)\mod_info.yaml")
-xcopy /Y /R /I /E /Q "$(ProjectDir)mods\$(TargetName)" "C:%25HOMEPATH%25\Documents\Klei\OxygenNotIncluded\mods\dev\$(TargetName)"
+echo F | xcopy /Y /R /I /E /Q "$(ProjectDir)mods\$(TargetName)" "C:%25HOMEPATH%25\Documents\Klei\OxygenNotIncluded\mods\dev\$(TargetName)"
 rmdir /s /q "$(ProjectDir)mods"</PostBuildEvent>
   </PropertyGroup>
 </Project>
