--- a/LiquidBottlerVanilla/LiquidBottlerVanilla.csproj
+++ b/LiquidBottlerVanilla/LiquidBottlerVanilla.csproj
@@ -34,7 +34,9 @@
     <Compile Include="HarmonyDatabaseInitPatch.cs" />
     <Compile Include="LiquidBottleEmptier.cs" />
     <Compile Include="LiquidBottleEmptierConfig.cs" />
+    <Compile Include="LiquidBottler.cs" />
     <Compile Include="LiquidBottlerConfig.cs" />
+    <Compile Include="StringUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="0Harmony, Version=1.2.0.1, Culture=neutral, processorArchitecture=MSIL" />
