--- a/LiquidBottlerDLC/mod_info.yaml
+++ b/LiquidBottlerDLC/mod_info.yaml
@@ -1,5 +1,5 @@
-supportedContent: EXPANSION1_ID
-minimumSupportedBuild: 469473
+supportedContent: EXPANSION1_ID,VANILLA_ID
+minimumSupportedBuild: 471883
 APIVersion: 2
-version: "1.3.0"
+version: "1.3.1"
 staticID: "Alesseon.LiquidBottler"
