--- a/LiquidBottlerVanilla/mod_info.yaml
+++ b/LiquidBottlerVanilla/mod_info.yaml
@@ -1,2 +1,5 @@
 supportedContent: VANILLA_ID
-lastWorkingBuild: 455425
+minimumSupportedBuild: 471883
+APIVersion: 2
+version: "1.3.1"
+staticID: "Alesseon.LiquidBottler"
