--- a/LiquidBottlerDLC/LiquidBottlerDLC.csproj
+++ b/LiquidBottlerDLC/LiquidBottlerDLC.csproj
@@ -33,6 +33,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="translations\zh.po" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="0Harmony, Version=2.0.5.0, Culture=neutral, processorArchitecture=MSIL">
@@ -63,6 +64,7 @@
     <Compile Include="LiquidBottleEmptierConfig.cs" />
     <Compile Include="LiquidBottler.cs" />
     <Compile Include="LiquidBottlerConfig.cs" />
+    <Compile Include="Localization.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -73,13 +75,16 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>if not exist "$(ProjectDir)mods\$(TargetName)" (mkdir $(ProjectDir)\mods\$(TargetName))
+if not exist "$(ProjectDir)mods\$(TargetName)\translations" (mkdir $(ProjectDir)\mods\$(TargetName)\translations)
 copy /Y "$(TargetPath)" "$(ProjectDir)mods\$(TargetName)\$(TargetName).dll"
 if exist "$(ProjectDir)anims" (xcopy /Y /R /I /E /Q  "$(ProjectDir)anims" "$(ProjectDir)mods\$(TargetName)\anims")
 if exist "$(ProjectDir)Config.json" (copy /Y "$(ProjectDir)Config.json" "$(ProjectDir)mods\$(TargetName)\Config.json")
 if exist "$(ProjectDir)mod_info.yaml" (copy /Y "$(ProjectDir)mod_info.yaml" "$(ProjectDir)mods\$(TargetName)\mod_info.yaml")
+if exist "$(ProjectDir)\translations\zh.po" (copy /Y "$(ProjectDir)\translations\zh.po" "$(ProjectDir)mods\$(TargetName)\translations\zh.po")
 echo F | xcopy /Y /R /I /E /Q "$(ProjectDir)mods\$(TargetName)" "C:%25HOMEPATH%25\Documents\Klei\OxygenNotIncluded\mods\dev\$(TargetName)"
 rmdir /s /q "$(ProjectDir)mods"</PostBuildEvent>
   </PropertyGroup>
